--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="\robotech_nitk_logo.jpeg" />
-    <link rel="stylesheet" href="/fontawesome/css/all.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <meta name="description" content="Robotech NITK - Official Robotics Club Website">
+    <meta name="theme-color" content="#000000">
+    <link rel="icon" type="image/jpeg" href="/robotech_nitk_logo.jpeg" />
+    
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Robotech NITK</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+       <!-- AFTER BUILD -->
+    <!-- <script type="module" src="/assets/index-xxxx.js"></script> -->
   </body>
 </html>
